--- a/contract/package.json
+++ b/contract/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.22.13"
   },
   "dependencies": {
-    "@reclaimprotocol/verifier-solidity-sdk": "^1.0.4"
+    "@reclaimprotocol/verifier-solidity-sdk": "^1.0.4",
+    "hardhat-abi-exporter": "^2.10.1"
   }
 }
